Various minor fixes for the rest harness.
Changed all references to userid to reference user_name, to be consistent with core sugar.
Fixed a problem in config where setting --route to a URL with a query string would drop the query string vars.
Fixed another problem in config where setting --post.name would overwrite post entirely.
Updated comments in the concise formatter.
Enabled the TwoColumnLimited formatter to actually limit.
Fixed a minor error condition in the RestConnect ($url should be $this->url)
Updated FAQ and help files.
Fixed config problems in JobSeries class.

--- a/FAQ.txt
+++ b/FAQ.txt
@@ -39,7 +39,7 @@
   
   NOTE: you can override anything you set as config option
   in your config file or in job files (see below) on the command line. For example,
-  --userid=fh-level0user0 --password=fh-level0user0 will change the user you log in
+  --user_name=fh-level0user0 --password=fh-level0user0 will change the user you log in
   as while using the harness.
   
   NOTE: You can have more than one config file, to support multiple servers and/or
